2013-01-15  Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_visual_map.php: Now warning modules with
	alert appear with warning image and orange border, before they
	appear with critical picture and orange border.

	FIXDE BUG: 3592771

2013-01-15 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/db/postgresql.php
	include/db/mysql.php
	include/db/oracle.php: Fixed function get_system_time when 
	timesource is system.

2013-01-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* images/skin/skin_default/include/styles/pandora.css: Fixed small
	bug in default skin css.

2013-01-14  Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/tree.php: Now agents appear ordered by name.

	FIXED BUG: 3576294

2013-01-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_component_groups.php
	 godmode/modules/manage_network_components.php: Don't remove 
	 parent component groups with childs assigned to components.

2013-01-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/modules/manage_nc_groups.php: Parent row removed.

2013-01-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/events/export_csv.php
	operation/events/events_list.php
	operation/events/events.php: CSV exportation get all filters.
	
	Bug id: #3600096

2013-01-14  Dario Rodriguez <dario.rodriguez@artica.es>

	* extras/network_components.postgreSQL.sql,
	extras/network_components.mysql.sql,
	extras/network_components.oracle.sql: Added script to create new network
	modules and groups if something fails.

2013-01-14 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/styles/dialog.css: fixed the typo for disabled the styles.
	
	MERGED FROM THE TRUNK

2013-01-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/extensions.php
	godmode/servers/recon_script.php
	godmode/servers/plugin.php
	godmode/servers/manage_recontask.php
	godmode/alerts/alert_compounds.php
	godmode/alerts/alert_templates.php
	godmode/alerts/alert_actions.php